fixed a bug where the cursor jumped if the title was the first ever change

--- a/src/neo/components/ProjectHeader/style.css
+++ b/src/neo/components/ProjectHeader/style.css
@@ -33,7 +33,7 @@
   outline: 0;
 }
 
-.header .title.changed:after {
+.header.changed .title:after {
   content: "*";
 }
 
